fixed temporary whitespace between collections on HomeCollections page of AWHV

--- a/client/src/components/AllWeatherHighViz/HomeCollections/style.css
+++ b/client/src/components/AllWeatherHighViz/HomeCollections/style.css
@@ -10,3 +10,8 @@
     margin: 0 auto;
     padding: 2%;
 }
+.awhv-home-iframe {
+    width: 100%;
+    height: 500px!important;
+    border: none;
+}
